# mkdocs-material

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
demo/: index.html
docs/: demo.md  index.md  other_page.md
docs/examples/: scrip1.py
example/: __init__.py  mod0.py
example/sub1/: __init__.py  mod.py
examples/: index.html
examples/scrip1/: index.html
other_page/: index.html
reference/: index.html
reference/mod0/: index.html
reference/sub1/: index.html
reference/sub1/mod/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
