[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-material>=9.5.42",
    "mkdocstrings>=0.26.2",
    "mkdocstrings-python>=1.12.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.1",
]
